Finished simple schemes and started von Neumann.

--- a/book/Parts/Part2.tex
+++ b/book/Parts/Part2.tex
@@ -333,7 +333,7 @@ At this point it is worth noting that the form of the linear diffusion equation 
 
 \chapter{Turbulence}
 \section{Turbulence Theory}
-\subsection{Chaos}
+\subsection{Introduction to Chaos}
 \subsection{Chaos and Navier-Stokes}
 \subsection{The Energy Cascade}
 \section{Reynolds Averaging}
